--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate.ejs') %>
 
-    <body>
+    <div class="container flex-grow-1">
         <div class="row mt-3">
             <div class="col-8 offset-3">
 
@@ -11,17 +11,13 @@
                 <img src="<%= listing.image%>" class="card-img-top show-img" alt="listing-image">
                 <div class="card-body">
                     <p class="card-text">
-                        <b>
-                            
+                        <i>Owned by: <%= listing.owner.username %></i></p>
                         
-                        <%= listing.description %><br>
-                            &#x20B9;<%= listing.price.toLocaleString("en-IN") %><br>
-                                <%= listing.location %><br>
-                                    <%= listing.country %><br>
+                            <p class="card-text"><%= listing.description %></p>
+                            <p class="card-text">&#x20B9;<%= listing.price.toLocaleString("en-IN") %></p>
+                            <p class="card-text">    <%= listing.location %></p>
+                            <p class="card-text">        <%= listing.country %></p>
 
-
-
-                    </p>
                 </div>
 
 
@@ -29,17 +25,21 @@
             
 
         </div>
+        <br>
+    <% if(currentUser && currentUser._id.equals(listing.owner._id)) { %>    
         <div class="btns">
             <br>
             <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-            
-            
             <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
                 <button type="submit" class="btn btn-dark offset-5">Delete</button>
             </form>
             </div>
+    <% } %>
+
+            
             <div class="col-8 offset-3">
                 <hr>
+                <% if(currentUser) { %>
                 <h4>Leave a Review</h4>
                 <form action="/listings/<%= listing.id %>/reviews" method="POST" class="needs-validation" novalidate>
                     <div class="mb-3 mt-3">
@@ -54,7 +54,8 @@
                     <br>
                     <button type="submit" class="btn btn-outline-dark">Submit</button>
             </form>
-            <hr/>
+            <% } %>
+            
             <h4>Reviews:</h4> 
             <div class="row">
 
@@ -72,4 +73,7 @@
                 </form>
             </div>
             <% } %>
-    </body>
+    </div>
+    
+    </div>
+ 
