changed styling of reviews

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -38,7 +38,7 @@
         <div class="invalid-feedback">Please enter the location</div>
         </div>
         
-        <br><br/><button type="submit" class="btn btn-dark add-btn mt-3">Add</button>
+        <br><button type="submit" class="btn btn-dark add-btn mt-3">Add</button>
         </form>
         </div>
         </div>
